Remove syscalls for now

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -1,7 +1,7 @@
 all: armforth run
 
 armforth: armforth.S
-	gcc -nostdlib -static -Wl,-Ttext,0 -Wl,--build-id=none -o armforth armforth.S
+	arm-none-eabi-gcc -nostdlib -static -Wl,-Ttext,0 -Wl,--build-id=none -o armforth armforth.S
 
 run:
 	cat ../x86/jonesforth.f - | ./armforth
